istio/goods/kubernetes/deployment.yml
# API version
apiVersion: apps/v1

# resource type
kind: Deployment

# metadata of the deployment
metadata:
  name: goods
  labels:
    app: goods
    version: v1

# specification
spec:
  # need 1 replicas to run
  replicas: 1

  selector:
    matchLabels:
      app: goods
      version: v1

  # using this template to create pod
  template:
    metadata:
      labels:
        app: goods
        version: v1

    spec:
      # hostNetwork: true
      containers:
        - name: goods
          image: istio-test/goods:v1
          ports:
            - containerPort: 9996
          resources:
            requests:
              cpu: 0.2
              memory: "56Mi"
            limits:
              cpu: 1
              memory: "128Mi"
      restartPolicy: Always
