istio/goods/kubernetes/service.yml
# API version
apiVersion: v1

# resource type
kind: Service

# metadata of the service
metadata:
  name: goods

# specification
spec:
  type: ClusterIP

  ports:
    - name: http
      port: 9996
      protocol: TCP
      targetPort: 9996

  selector:
    app: goods
