istio/goods/kubernetes/ingress.yml
# API version
apiVersion: networking.k8s.io/v1beta1

# resource type
kind: Ingress

# metadata of the service
metadata:
  name: goods

# specification
spec:
  backend:
    serviceName: goods
    servicePort: 9996
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: goods
              servicePort: 9996
